deploy: 89706de2f8f71b7934112abec9f7ad943abd7816

--- a/index.html
+++ b/index.html
@@ -1278,6 +1278,7 @@
 - <strong>Workflow</strong> — running and validating the tool<br />
 - <strong>Developer Guide</strong> — structure, tests and contribution notes</p>
 <p>If anything looks off, open an issue or a PR on the GitHub repo linked in the header.</p>
+<p>-- This documentation was last updated February 2026 at 5:46PM GMT --</p>
 
 
 
